add auth module and component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
+<!--app-ui-top-navigation></app-ui-top-navigation>
+
+<app-ui-sub-navigation [title]="(observable$ | async)?.title" [description]="(observable$ | async)?.text"></app-ui-sub-navigation-->
+
 <h2>Dashboard component</h2>
 
 <h3>Feeds</h3>
