--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
   <div class="ui-panel login-panel animated bounceInDown">
     <header>
       <div class="left logo">
-        <a href="#logo"><span>Banana</span>plate</a>
+        <a href="#logo"></a>
       </div>
       
       <div class="right">
