--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -15,7 +15,7 @@
     <div class="login-form">
       <div class="subtitle"><div class="subtitle">or<a [routerLink]="['/auth/login']" [queryParams]="{debug: true}" >
         Login    </a></div></div>
-      <input placeholder="Username" type="text" formControlName="username" />
+      <input placeholder="email" type="text" formControlName="email" />
       <input placeholder="Password" type="password" formControlName="password" />
       <input placeholder="Verify Password" type="password" formControlName="verify" />
       <input placeholder="1-555-555-555" type="text" formControlName="phone" />
